tests/lowering/use-in-unsupported.stderr
error: use/in expressions not supported yet
 >>> ${DIRECTORY}/lowering/use-in-unsupported.lushui:4:5
  |
4 |       use qualified.thing as matter in
  |  _____^
5 | |     this-location
  | |_________________^ 
  |

error: aborting due to previous error

