tests/lowering/use-in-unsupported.lushui
;; TEST fail check

main: IO Unit =
    use qualified.thing as matter in
    this-location
